# WordleSolver

./: .gitignore  CMakeLists.txt  README.md
assets/: letters
src/: dict.c  dict.h  globals.c  globals.h  letters.c  letters.h  main.c  readdict.c  readdict.h  solver.c  solver.h
